--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 # MySQL Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/swesprint
-spring.datasource.username=root
-spring.datasource.password=yourpassword
+spring.datasource.username=cs5330
+spring.datasource.password=pw5330
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA (Hibernate) Configuration
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true  # Show SQL queries in the console
+spring.jpa.show-sql=true
+# Show SQL queries in the console
