--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,6 +6,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA (Hibernate) Configuration
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-# Show SQL queries in the console
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true  # Show SQL queries in the console
