--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # MySQL Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/swesprint
-spring.datasource.username=root
-spring.datasource.password=Zonsh2012!
+spring.datasource.username=cs5330
+spring.datasource.password=pw5330
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA (Hibernate) Configuration
