--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-# MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/swesprint
-spring.datasource.username=cs5330
-spring.datasource.password=pw5330
+spring.datasource.url=jdbc:mysql://db:3306/cshub
+spring.datasource.username=root
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# JPA (Hibernate) Configuration
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
-# Show SQL queries in the console
+
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:schema.sql
